--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 anyio==4.9.0
 asgiref==3.8.1
 certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.5
+defusedxml==0.7.1
 Django==5.2.3
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.1
+djoser==2.3.3
 dotenv==0.9.9
 drf-yasg==1.21.10
 h11==0.16.0
@@ -10,14 +16,24 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 inflection==0.5.1
+oauthlib==3.3.1
 packaging==25.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
+pycparser==2.22
+PyJWT==2.10.1
 python-dotenv==1.1.1
 python-telegram-bot==22.1
+python3-openid==3.2.0
 pytz==2025.2
 PyYAML==6.0.2
+requests==2.32.4
+requests-oauthlib==2.0.0
+rest-framework-simplejwt==0.0.2
 sniffio==1.3.1
+social-auth-app-django==5.5.1
+social-auth-core==4.7.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
 uritemplate==4.2.0
+urllib3==2.5.0
